# material-ranker

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
scripts/: lint.sh  prestart.sh  tests-start.sh
src/: main.py  media_route.py  models.py  urls.py  worker.py
src/admin/: schemas.py  services.py  tasks.py
src/alembic/: env.py
src/alembic/versions/: 0d870c79c410_added_admin_models.py  435bec889a24_first_migration.py  5539a3bcc20e_added_is_active_field_to_user_table.py  7c1831c3c446_added_user_table.py  9622151eda66_first_migration.py  ebbd26206b4f_added_material_rating.py  fa5ba9350ffe_first_migration.py
src/core/: config.py  db.py  dependecies.py  jinja2.py  security.py  sessions.py
src/libs/: exceptions.py  fields.py  log.py  mail.py  schemas.py  utils.py
src/material/: schemas.py  services.py  tasks.py
src/material/parsers/: base.py  text.py
src/material/tfid/: train.py  vectorizer.py  vertorizer.py
src/scripts/: initial_data.py
src/scripts/fixtures/: load_fixtures.py
src/site/: router.py  routes.py
src/site/routes/: admin.py  auth.py  materials.py  schemas.py  site.py  users.py
src/static/css/: admin_style.css  auth_style.css  user_style.css
src/static/js/: password.js
src/templates/: base.html
src/templates/mail/: email_verification.html  forgot_password_email.html  material_recommendation_approved.html  material_recommendation_request.html  synchronization_complete.html
src/templates/site/pages/: 404_error_page.html  404_errorpage.html  500_error_page.html  500_errorpage.html  ResetPassword.html  SetNewPassword.html  base.html  landing.html  login.html  makerecommendation.html  ratematerial.html  signup.html  userdashboard.html  userprofile.html
src/templates/site/pages/admin/: admin_dashboard.html  admindashboard.html  base.html  create_admin.html  createadmin.html  materials.html  reccommendation.html
src/templates/site/pages/auth/: admin_login.html  admin_reset_password.html  base.html  email_verified.html  emailverification.html  login.html  password-reset-set-password.html  signup.html  (+5 more)
src/users/: models.py  routes.py  schemas.py  services.py  tasks.py
(+20 files in other folders)
