[project]
name = "material-ranker"
version = "0.1.0"
description = "This project is a cource material-ranker."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]<1.0.0,>=0.114.2",
    "python-multipart<1.0.0,>=0.0.7",
    "email-validator<3.0.0.0,>=2.1.0.post1",
    "passlib[bcrypt]<2.0.0,>=1.7.4",
    "tenacity<9.0.0,>=8.2.3",
    "pydantic>2.0",
    "emails<1.0,>=0.6",
    "jinja2<4.0.0,>=3.1.4",
    "alembic<2.0.0,>=1.12.1",
    "httpx<1.0.0,>=0.25.1",
    "psycopg[binary]<4.0.0,>=3.1.13",
    "sqlmodel<1.0.0,>=0.0.21",
    # Pin bcrypt until passlib supports the latest
    "bcrypt==4.0.1",
    "pydantic-settings<3.0.0,>=2.2.1",
    "sentry-sdk[fastapi]<2.0.0,>=1.40.6",
    "pyjwt<3.0.0,>=2.8.0",
    "ruff>=0.6.7",
    "factory-boy>=3.3.1",
    "celery>=5.4.0",
    "redis>=5.2.1",
    "celery-types>=0.22.0",
    "fastapi-sessions>=0.3.2",
    "cryptography>=44.0.1",
    "ipython>=8.32.0",
    "sqlalchemy-file>=0.6.0",
    "fasteners>=0.19",
    "pillow>=11.1.0",
    "pdfplumber>=0.11.5",
    "spacy>=3.8.4",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "pip>=25.0.1",
]
